[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="jchen", email="jchen@student.42.fr" },
]
description = "My first package creation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jchenstud42/13_python_for_data_science"
